@@ -15,18 +15,18 @@
  */
 package com.ibm.websphere.samples.daytrader.ejb3;
 
-import javax.annotation.Resource;
-import javax.ejb.ActivationConfigProperty;
-import javax.ejb.EJB;
-import javax.ejb.MessageDriven;
-import javax.ejb.MessageDrivenContext;
-import javax.ejb.TransactionAttribute;
-import javax.ejb.TransactionAttributeType;
-import javax.ejb.TransactionManagement;
-import javax.ejb.TransactionManagementType;
-import javax.jms.Message;
-import javax.jms.MessageListener;
-import javax.jms.TextMessage;
+import jakarta.annotation.Resource;
+import jakarta.ejb.ActivationConfigProperty;
+import jakarta.ejb.EJB;
+import jakarta.ejb.MessageDriven;
+import jakarta.ejb.MessageDrivenContext;
+import jakarta.ejb.TransactionAttribute;
+import jakarta.ejb.TransactionAttributeType;
+import jakarta.ejb.TransactionManagement;
+import jakarta.ejb.TransactionManagementType;
+import jakarta.jms.Message;
+import jakarta.jms.MessageListener;
+import jakarta.jms.TextMessage;
 
 import com.ibm.websphere.samples.daytrader.TradeServices;
 import com.ibm.websphere.samples.daytrader.direct.TradeDirect;
@@ -82,7 +82,7 @@ public class DTBroker3MDB implements MessageListener {
             }
             if (command.equalsIgnoreCase("neworder")) {
                 /* Get the Order ID and complete the Order */
-                Integer orderID = new Integer(message.getIntProperty("orderID"));
+                Integer orderID = Integer.valueOf(message.getIntProperty("orderID"));
                 boolean twoPhase = message.getBooleanProperty("twoPhase");
                 boolean direct = message.getBooleanProperty("direct");
                 long publishTime = message.getLongProperty("publishTime");
